src/objects/Endorsement__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Endorsements</relationshipLabel>
        <relationshipName>Endorsements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Endorsements</relationshipLabel>
        <relationshipName>Endorsements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EndorsementId__c</fullName>
        <externalId>true</externalId>
        <label>EndorsementId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Endorsements</relationshipLabel>
        <relationshipName>Endorsements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link_To_Article__c</fullName>
        <description>For Internet, a place where a user can add a link to the actual article that was on the web. (The link should populate automatically by having a tie-in with the system we use to create and link local vendors to real wedding stories online)</description>
        <label>Link To Article</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Endorsements</relationshipLabel>
        <relationshipName>Endorsements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Endorsements</relationshipLabel>
        <relationshipName>Endorsements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_Date__c</fullName>
        <label>Publication Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <label>Publication</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <controllingField>Country__c</controllingField>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armed Forces Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armed Forces Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armed Forces Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federated Micronesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marshall Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Internet Endorsement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Wedding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine Feed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>XO_Affiliated_Account__c</fullName>
        <formula>Account__r.DynamicsAccID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>XO Affiliated Account is the Account Location Id related with current Endorsement.</inlineHelpText>
        <label>XO Affiliated Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip/Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Endorsement</label>
    <listViews>
        <fullName>Admin_List</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Category__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Admin List</label>
    </listViews>
    <nameField>
        <label>Endorsement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Endorsements</pluralLabel>
    <recordTypes>
        <fullName>BOW</fullName>
        <active>true</active>
        <label>BOW</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internet</fullName>
        <active>true</active>
        <label>Internet</label>
    </recordTypes>
    <recordTypes>
        <fullName>PrintPrint</fullName>
        <active>true</active>
        <label>Print</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>